--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div class="topBar">
+        <p id="timer"></p>
+    </div>
+    <div class="content">
+
+    </div>
 
     <script src="./assets/js/script.js"></script>
 </body>
