added basic stylings and placeholders

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
 <body>
     <div class="topBar">
+        <p id="resetBtn">Reset</p>
         <p id="timer"></p>
     </div>
     <div class="content">
-
+        <section id="quizBox">
+            <h1>question:</h1>
+            <p>answer</p>
+            <p>answer</p>
+            <p>answer</p>
+            <p>answer</p>
+        </section>
     </div>
 
     <script src="./assets/js/script.js"></script>
