added default states and functionality to start button

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 
 <body>
     <div class="topBar">
-        <p id="resetBtn">Reset</p>
+        <button id="startResetBtn" data-function="start"></button>
         <p id="timer"></p>
     </div>
     <div class="content">
+        
         <section id="quizBox">
-            <h1>question:</h1>
-            <p>answer</p>
-            <p>answer</p>
-            <p>answer</p>
-            <p>answer</p>
+            <!-- construct quizbox in js with array modularity -->
         </section>
     </div>
 
