added content clear and cleaned code

--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <button id="startResetBtn" data-function="start"></button>
         <p id="timer"></p>
     </div>
-    <div class="content">
-        
-        <section id="quizBox">
-            <!-- construct quizbox in js with array modularity -->
-        </section>
+    <div id="content">
+
     </div>
 
     <script src="./assets/js/script.js"></script>
