started question box creation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="topBar">
         <button id="startResetBtn" data-function="start"></button>
-        <p id="timer"></p>
+        <p id="timer">Time: N/A</p>
     </div>
     <div id="content">
 
