added high score button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="topBar">
-        <button id="startResetBtn" data-function="start"></button>
+        <button class="staticBtn" id="startResetBtn" data-function="start"></button>
+        <button class="staticBtn" id="highScoreBtn">High Scores</button>
         <p id="timer">Time: N/A</p>
     </div>
     <div id="content">
